agora vai se DEUS QUIDERpip freeze > requirements.txt!

--- a/DjangoChatBotApp/templates/app.html
+++ b/DjangoChatBotApp/templates/app.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html>
   <head>
-    <title>ChatBot com Django e Chatterbot</title>
+    <title>Chá de Bode</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}"/>
     <link rel="stylesheet" href="{% static 'css/custom.css' %}"/>
   </head>
@@ -14,7 +14,7 @@
 
       <div class="jumbotron mt-1">
         <h1 class="jumbotron-heading text-xs-center">
-            Bem Vindo ao Chá de Bode
+            Bem-Vindo ao Chá de Bode
         </h1>
         <p class="lead text-xs-center">
           Pergunte sobre qualquer coisa:
